--- a/client/src/index.css
+++ b/client/src/index.css
@@ -213,6 +213,14 @@ img {
   transition: 0.3s;
 }
 
+.mobile-feature-search input{
+    border: none;
+    border-bottom: 2px solid #003c50;
+    background: none;
+    padding: 15px;
+    transition: 0.3s;
+    margin-bottom: 15px;
+}
 
 button{
   background: none;
@@ -273,6 +281,10 @@ button.search{
   transition: 0.4s;
 }
 
+button.search:hover, button.search:active{
+    background-color: rgb(203, 203, 203);
+}
+
 .cross i{
   transform: rotate(45deg);
   transition: 0.3s;
@@ -285,7 +297,7 @@ button.search{
 
 .comment-container{
   position: relative;
-  padding: 25px 25px;
+    padding: 0;
 }
 
 .delete{
@@ -354,7 +366,7 @@ button.search{
 }
 
 .feature-count p.admin-vote{
-  margin: 0 25px;
+  margin: 0 auto;
 }
 
 .feature-text{padding: 30px 15px 25px 0;}
@@ -369,13 +381,23 @@ button.search{
 
 @media only screen and (max-width: 699px) {
   /*Display feature count next to feature body on mobile devices*/
-  .feature-count, .comment-section-button, .add-button, .delete-project, .decline-admin-button, .feature-search i {
-    width: 25%;
+  .feature-count , .add-button, .delete-project, .decline-admin-button{
+    width: 16.66%;
   }
 
-  .feature-text, .comment-section-content, .project-name, .FDV-comment-count, .user-name, .feature-search input {
-    width: 75%;
+  .feature-text, .project-name, .FDV-comment-count, .user-name {
+    width: 83.33%;
   }
+
+    .comment-section-button, .feature-section-button{ width: 25%;}
+    .comment-section-content, .feature-review-text{width: 75%;}
+
+
+    .project .search-button, .project .add-button{width: 16.66%}
+
+    .project .project-name{width: 66.66%;}
+
+
 }
 
 
