--- a/client/src/index.css
+++ b/client/src/index.css
@@ -289,6 +289,7 @@ button.search{
   background-color: rgba(234, 234, 234, 0.95);
   float: right;
   transition: 0.4s;
+  margin: 0.7em 0;
 }
 
 button.search:hover, button.search:active{
