--- a/client/src/index.css
+++ b/client/src/index.css
@@ -203,17 +203,23 @@ img {
   height: auto;
 }
 
+
 .feature-search input{
   border: none;
   border-bottom: 2px solid #003c50;
   background: none;
+  padding: 15px;
+  margin: 20px 0 0 0;
+  transition: 0.3s;
 }
 
-.feature-search{
-  background-color: rgba(234, 234, 234, 0.95);
-  font-size: 1.5rem;
-  padding: 0 15px 0 0;
-  margin-bottom: 15px;
+.mobile-feature-search input{
+    border: none;
+    border-bottom: 2px solid #003c50;
+    background: none;
+    padding: 15px;
+    transition: 0.3s;
+    margin-bottom: 15px;
 }
 
 button{
@@ -230,9 +236,12 @@ button.decline i, button.accept i, button.add i{
   transition: 0.3s;
 }
 
+button.search i{
+  color: #003c50;
+}
 
 
-button.decline, button.accept, button.add{
+button.decline, button.accept, button.add, button.search{
   border-radius: 25px;
   color: white;
   height: 45px;
@@ -276,6 +285,17 @@ button.add{
   margin: 0.7em 0;
 }
 
+button.search{
+  background-color: rgba(234, 234, 234, 0.95);
+  float: right;
+  transition: 0.4s;
+  margin: 0.7em 0;
+}
+
+button.search:hover, button.search:active{
+    background-color: rgb(203, 203, 203);
+}
+
 .cross i{
   transform: rotate(45deg);
   transition: 0.3s;
@@ -288,7 +308,7 @@ button.add{
 
 .comment-container{
   position: relative;
-  padding: 25px 25px;
+    padding: 0;
 }
 
 .delete{
@@ -357,7 +377,7 @@ button.add{
 }
 
 .feature-count p.admin-vote{
-  margin: 0 25px;
+  margin: 0 auto;
 }
 
 .feature-text{padding: 30px 15px 25px 0;}
@@ -372,13 +392,23 @@ button.add{
 
 @media only screen and (max-width: 699px) {
   /*Display feature count next to feature body on mobile devices*/
-  .feature-count, .comment-section-button, .add-button, .delete-project, .decline-admin-button, .feature-search i {
-    width: 25%;
+  .feature-count , .add-button, .delete-project, .decline-admin-button{
+    width: 16.66%;
   }
 
-  .feature-text, .comment-section-content, .project-name, .FDV-comment-count, .user-name, .feature-search input {
-    width: 75%;
+  .feature-text, .project-name, .FDV-comment-count, .user-name {
+    width: 83.33%;
   }
+
+    .comment-section-button, .feature-section-button{ width: 25%;}
+    .comment-section-content, .feature-review-text{width: 75%;}
+
+
+    .project .search-button, .project .add-button{width: 16.66%}
+
+    .project .project-name{width: 66.66%;}
+
+
 }
 
 
