--- a/client/src/index.css
+++ b/client/src/index.css
@@ -137,6 +137,15 @@ body{
   z-index: 999;
 }
 
+button:hover{
+  filter: brightness(90%);
+  transition: 0.3s;
+}
+
+button{
+  transition: 0.3s;
+}
+
 .login-button, .logout-button, .comment-review-button, .back-button, .user-settings-button{
   color: white;
   float: right;
@@ -189,7 +198,10 @@ hr{
 
 .active{display: block;}
 
-button.inactive{cursor: default;}
+button.inactive{
+  cursor: default;
+  filter: none;
+}
 
 button.inactive i{
   color:#eaeaea;
@@ -331,10 +343,12 @@ button.search:hover, button.search:active{
   color: rgba(127, 157, 167, 0.5);
   font-size: 1.5rem;
   margin: 0 1px;
+  transition: 0.3s;
 }
 
 .delete button i:hover{
   color: #f15a24;
+  transition: 0.3s;
 }
 
 
