--- a/client/src/index.css
+++ b/client/src/index.css
@@ -91,7 +91,7 @@ body{
 }
 
 .confirm-delete{
-  background-color: #7fba24;
+  background-color: #f15a24;
 }
 
 .not-confirm-delete{
@@ -135,6 +135,15 @@ body{
   padding: 0;
   position: fixed;
   z-index: 999;
+}
+
+button:hover{
+  filter: brightness(93%);
+  transition: 0.3s;
+}
+
+button{
+  transition: 0.3s;
 }
 
 .login-button, .logout-button, .comment-review-button, .back-button, .user-settings-button{
@@ -189,7 +198,10 @@ hr{
 
 .active{display: block;}
 
-button.inactive{cursor: default;}
+button.inactive{
+  cursor: default;
+  filter: none;
+}
 
 button.inactive i{
   color:#eaeaea;
@@ -323,17 +335,24 @@ button.search:hover, button.search:active{
   width: 30px;
   height: 30px;
   border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .delete button i{
   float:right;
-  color: #f15a24;
+  color: rgba(205, 205, 205, 0.5);
   font-size: 1.5rem;
   margin: 0 1px;
+  transition: 0.3s;
+}
+
+.delete button i:hover{
+  color: #f15a24;
+  transition: 0.3s;
 }
 
 .delete button:hover{
-  background-color: rgba(127, 157, 167, 0.2);
+  filter: none;
 }
 
 
@@ -387,6 +406,11 @@ button.search:hover, button.search:active{
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  padding: 0;
+}
+
+
+.comment-images{
   padding: 0;
 }
 
@@ -600,7 +624,7 @@ select{
 
 .to-top button i{
   font-size: 2.5rem;
-  color: rgba(255, 255, 255, 0.61);
+  color: rgba(255, 255, 255, 0.9);
   margin-bottom: 15px;
 }
 
@@ -612,7 +636,7 @@ select{
   bottom: 150px;
   transition: 0.5s;
   cursor: pointer;
-  background-color: rgba(234, 234, 234, 0.9);
+  background-color: rgba(234, 234, 234, 0.5);
   font-size: 20px;
   z-index: 999;
 }
