dynamic carousel height

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -409,6 +409,10 @@ button.search:hover, button.search:active{
   padding: 0;
 }
 
+.feature-review-image{
+  padding: 0;
+}
+
 
 .comment-images{
   padding: 0;
