--- a/client/src/index.css
+++ b/client/src/index.css
@@ -378,6 +378,8 @@ button.search:hover, button.search:active{
   position: relative;
 }
 
+
+
 .feature-count{
   padding: 19px 0;
 }
@@ -406,6 +408,10 @@ button.search:hover, button.search:active{
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  padding: 0;
+}
+
+.feature-review-image, .cr-image{
   padding: 0;
 }
 
@@ -443,6 +449,10 @@ button.search:hover, button.search:active{
 
 .comment-section-content{
   padding: 35px 25px;
+}
+
+.comment-section-item{
+  padding: 0;
 }
 
 .easter-egg{
