--- a/client/src/index.css
+++ b/client/src/index.css
@@ -448,7 +448,7 @@ button.search:hover, button.search:active{
 }
 
 .comment-section-content{
-  padding: 35px 25px;
+  padding: 25px 15px 25px 0;
 }
 
 .comment-section-item{
