--- a/client/src/index.css
+++ b/client/src/index.css
@@ -393,7 +393,7 @@ button.search:hover, button.search:active{
 }
 
 .feature-count p{
-  margin: 25px;
+  margin: 25px auto;
   font-weight: 600;
 }
 
