faq changed to help

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -109,7 +109,7 @@ body{
 .container{
   max-width: 1000px;
   margin: auto auto 50px auto;
-  padding: 0 10px 20vh 10px;
+  padding: 60px 10px 20vh 10px;
   min-height: 85vh;
 }
 
@@ -117,27 +117,6 @@ body{
   max-width: 1000px;
   margin: auto;
 }
-
-.breadcrumb{
-  padding: 80px 10px 10px 10px;
-  max-width: 1000px;
-  margin: auto;
-  font-size: 0.8rem;
-}
-
-
-.breadcrumb i{
-  margin: 0 8px
-}
-
-.breadcrumb a span, .breadcrumb a{
-  font-weight: 600;
-}
-
-.breadcrumb .overview-text{
-  display: none;
-}
-
 
 .logo{
   display: inline;
@@ -216,6 +195,9 @@ hr{
   border: 1px solid #eaeaea;
   margin: 30px 0;
 }
+.help{
+  color: #7fba24;
+}
 
 .active{display: block;}
 
@@ -234,6 +216,10 @@ span.active{display: inline}
 img {
   width: 100%;
   height: auto;
+}
+
+.help-img {
+  padding : 0px;
 }
 
 
@@ -399,8 +385,6 @@ button.search:hover, button.search:active{
   position: relative;
 }
 
-
-
 .feature-count{
   padding: 19px 0;
 }
@@ -414,7 +398,7 @@ button.search:hover, button.search:active{
 }
 
 .feature-count p{
-  margin: 25px auto;
+  margin: 25px;
   font-weight: 600;
 }
 
@@ -429,10 +413,6 @@ button.search:hover, button.search:active{
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  padding: 0;
-}
-
-.feature-review-image, .cr-image{
   padding: 0;
 }
 
@@ -462,9 +442,6 @@ button.search:hover, button.search:active{
 
 }
 
-.user-name{
-  padding: 20px 30px;
-}
 
 .feature-text .comment-count p{
   margin: 0;
@@ -472,11 +449,7 @@ button.search:hover, button.search:active{
 }
 
 .comment-section-content{
-  padding: 25px 15px 25px 0;
-}
-
-.comment-section-item{
-  padding: 0;
+  padding: 35px 25px;
 }
 
 .easter-egg{
@@ -552,11 +525,11 @@ footer div{
 }
 
 .questions, .answers{
-  margin: 80px 0;
+  margin: 100px 0;
 }
 
 .answers div{
-  margin: 50px 0;
+  margin: 80px 0;
 }
 .form{
   margin-bottom: 50px;
@@ -564,11 +537,7 @@ footer div{
 
 label{
   font-size: 1rem;
-  margin-bottom: 5px;
-}
 
-.login-name{
-  color: #7f9da7;
 }
 
 input, textarea{
@@ -704,17 +673,10 @@ select{
 
 
   .container{
+    max-width: 1000px;
     margin: auto auto 50px auto;
-    padding: 0 0 20vh 0;
-  }
-
-  .breadcrumb{
-    padding: 100px 10px 10px 10px;
-  }
-
-
-  .breadcrumb .overview-text{
-    display: inline;
+    padding: 80px 0 20vh 0;
+    min-height: 85vh;
   }
 
 
@@ -743,9 +705,5 @@ select{
 
   .submit{
     margin-left: 15px;
-  }
-
-  .user-name{
-    padding: 20px 0;
   }
 }
