weißer hintergrund für durchsichtige bilder

--- a/client/src/components/css/carousel.css
+++ b/client/src/components/css/carousel.css
@@ -212,7 +212,7 @@
     margin: 0;
     position: relative;
     text-align: center;
-    background: #000
+    background: #fff
 }
 
 .carousel .slide img {
